--- a/package.json
+++ b/package.json
@@ -12,14 +12,24 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cors": "^2.8.5",
+    "framer-motion": "^10.16.5",
+    "lucide-react": "^0.293.0",
     "mongodb": "^6.3.0",
     "next": "14.0.3",
+    "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.4.8",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
