--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.3.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
+    "node": "^21.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
